[package]
name = "markdown-wrangler"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "A web interface for managing websites stored as folder structures of markdown files"
homepage = "https://github.com/yaleman/markdown-wrangler"
repository = "https://github.com/yaleman/markdown-wrangler"
authors = ["James Hodgkinson <yaleman@ricetek.net>"]
keywords = ["markdown", "web", "cms", "static-site", "hugo"]
categories = ["web-programming", "text-processing"]

[dependencies]
askama = { version = "0.14.0", features = ["serde_json"] }
askama_web = { version = "0.14.6", features = ["axum-0.8"] }
axum = "0.8.4"
axum-tracing-opentelemetry = "0.30.0"
clap = { version = "4.5.46", features = ["derive"] }
hex = "0.4.3"
html-escape = "0.2.13"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.30.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-opentelemetry = { version = "0.31.0", features = ["metrics"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.21.0"
tower = { version = "0.5.2", features = ["util"] }
hyper = { version = "1.7.0", features = ["full"] }
http-body-util = "0.1.3"
