[package]
name = "markdown-wrangler"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "A web interface for managing websites stored as folder structures of markdown files"
homepage = "https://github.com/yaleman/markdown-wrangler"
repository = "https://github.com/yaleman/markdown-wrangler"
authors = ["James Hodgkinson <yaleman@ricetek.net>"]
keywords = ["markdown", "web", "cms", "static-site", "hugo"]
categories = ["web-programming", "text-processing"]

[dependencies]
askama = { version = "0.15.4", features = ["serde_json"] }
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
axum = { version = "0.8.8", features = ["multipart"] }
axum-tracing-opentelemetry = "0.33.0"
chrono = { version = "0.4.43", default-features = false }
clap = { version = "4.5.58", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
html-escape = "0.2.13"
image = "0.25.9"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "tonic"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
rand = "0.10.0"
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.32.1", features = ["metrics"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.25.0"
tower = { version = "0.5.3", features = ["util"] }
hyper = { version = "1.8.1", features = ["full"] }
http-body-util = "0.1.3"
